# histutils

./: ConvertDMC2h5.py  HDDcost.py  LICENSE.txt  Playh5.py  README.md  RunSimulFrame.py  WhenEnd.py  XMLparamPrint.py  pyproject.toml
.github/workflows/: ci.yml
examples/: Convert2013-04-11.py
matlab/: getFrameUTC.m  getRawInd.m  isoctave.m  rawDMCreader.m
scripts/: HDDcost.py  WhenEnd.py  WienerAurora.py  XMLparamPrint.py
src/histutils/: __init__.py  camclass.py  dio.py  get1Dcut.py  hstxmlparse.py  index.py  plots.py  plotsimul.py  rawDMCreader.py  simulFrame.py  solis.py  timedmc.py  utils.py
src/histutils/convert/: __main__.py
src/histutils/multiplay/: __main__.py
src/histutils/play/: __main__.py
src/histutils/tests/: test_all.py  test_scale.py  test_utils.py  testframes.xml
